--- a/client/src/component/detail/detail.module.css
+++ b/client/src/component/detail/detail.module.css
@@ -1,15 +1,13 @@
 .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 100px 1fr 230px;
   background-color: rgb(67, 62, 67);
-  height: 80%;
   border: 4px solid #0071e2;
   border-radius: 30px;
-  margin: 2% 10%;
-  display: grid;
-  grid-template-columns: 30% 1fr 1fr;
-  grid-template-rows: 100px 270px 230px;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 1rem;
   grid-column-gap: 30px;
-  padding: 50px;
 }
 
 .item {
@@ -62,28 +60,44 @@
   grid-row: 2 / 3;
   grid-column: 2 / -1;
   text-align: center;
+  padding: 0 1rem;
 }
 
 .item:nth-of-type(4) {
   grid-row: 3 / 4;
-  justify-self: center;
-  align-self: flex-start;
 }
 
 .item:nth-of-type(5) {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
-  justify-self: center;
-  align-self: center;
-  align-self: flex-start;
 }
 
 .item:nth-of-type(6) {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
-  justify-self: center;
-  align-self: center;
-  align-self: flex-start;
+}
+
+.item:nth-of-type(7) {
+  display: flex;
+  flex-direction: row;
+  grid-column: 1 / 4;
+  grid-row: 4 / 5;
+}
+
+.item:nth-of-type(7) img {
+  width: 15%;
+}
+
+.imageModal {
+  width: 100%;
+  max-height: 90vh;
+  border-radius: 15px;
+  object-fit: cover;
+}
+
+.item:nth-of-type(7) img:hover {
+  opacity: 0.4;
+  cursor: pointer;
 }
 
 .container h1 {
@@ -187,19 +201,13 @@
 }
 
 .smallImgs {
-  width: 15%;
+  width: 5%;
   border-radius: 10px;
 }
 
 .smallImgs:hover {
   cursor: pointer;
   opacity: 0.5;
-}
-
-.contarnerCardsImag {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
 }
 
 .imageDetail:hover {
