--- a/client/src/component/About/About.module.css
+++ b/client/src/component/About/About.module.css
@@ -40,10 +40,22 @@
 .images {
   width: 90%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
   flex-wrap: wrap;
   gap: 20px;
+  margin-bottom: 1rem;
+}
+
+.images div {
+  background-color: rgb(46, 43, 46);
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  text-align: start;
+  padding: 1rem;
 }
 
 .image {
@@ -59,6 +71,37 @@
 
 .imgModal {
   width: 100%;
-  /* max-height: 90%; */
+  max-height: 90%;
   border-radius: 15px;
+}
+
+.containerImages {
+  display: flex;
+  flex-direction: row !important;
+  padding: 0 !important;
+}
+
+.footer {
+  background-color: rgb(46, 43, 46);
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.footer img {
+  /* height: 60%; */
+  height: 50%;
+}
+
+.footer a {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.footer img:hover {
+  cursor: pointer;
+  opacity: 0.5;
 }
