--- a/client/src/component/card/card.module.css
+++ b/client/src/component/card/card.module.css
@@ -6,8 +6,11 @@
   word-wrap: break-word;
   text-align: center;
   align-items: center;
-  border: 2px solid white;
+  /* border: 2px solid white; */
+  border: none;
   overflow: hidden;
+  border-radius: 15px;
+  background-color: rgb(67, 62, 67);
 }
 
 .link:hover {
@@ -66,7 +69,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 10px;
+  margin-bottom: 10px;
   gap: 10px;
 }
 
