--- a/client/src/component/filtered/filtered.module.css
+++ b/client/src/component/filtered/filtered.module.css
@@ -4,11 +4,9 @@
   top: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 25px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-right: 5px;
+  justify-content: space-between;
+  height: 90vh;
+  margin: 1rem 0 1rem 1rem;
 }
 
 .button {
@@ -24,11 +22,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 5px 0 5px 0;
   padding: 5px;
   width: 100%;
   border: 2.5px solid #0071e2;
-  margin-left: 20px;
   border-radius: 10px 10px 10px 10px;
 }
 
@@ -42,10 +38,8 @@
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  margin: 5px;
   padding: 5px;
   border: 2.5px solid #0071e2;
-  margin-left: 20px;
   border-radius: 10px 10px 10px 10px;
   font-size: 13px;
 }
@@ -77,7 +71,6 @@
   width: 100%;
   padding: 5px;
   border: 2.5px solid #0071e2;
-  margin-left: 20px;
   border-radius: 10px 10px 10px 10px;
   font-size: small;
 }
@@ -88,7 +81,6 @@
   padding: 5px;
   display: flex;
   flex-direction: column;
-  margin-left: 20px;
   border: 2.5px solid #0071e2;
   border-radius: 10px 10px 10px 10px;
   font-size: 13px;
@@ -127,7 +119,6 @@
   display: flex;
   justify-content: space-around;
   width: 100%;
-  margin-left: 20px;
   padding: 5px;
   border: 2.5px solid #0071e2;
   border-radius: 10px 10px 10px 10px;
@@ -161,7 +152,6 @@
   height: 40px;
   border: none;
   border-radius: 10px 10px 10px 10px;
-  /* gap: 3px; */
 }
 
 .iconsPorfolio:hover {
@@ -203,6 +193,7 @@
   width: 30%;
   text-align: center;
   border: none;
+  font-size: 1rem;
 }
 
 .labelCreated:hover {
@@ -223,6 +214,7 @@
   padding: 5px;
   width: 30%;
   text-align: center;
+  font-size: 1rem;
 }
 
 .labelategory {
@@ -232,6 +224,7 @@
   font-weight: 501;
   padding: 5px;
   border: none;
+  font-size: 1rem;
 }
 
 .labelategory:hover {
@@ -250,6 +243,7 @@
   color: white;
   font-weight: 501;
   padding: 5px;
+  font-size: 1rem;
 }
 
 .labelategoryActive:hover {
