--- a/client/src/component/home/home.module.css
+++ b/client/src/component/home/home.module.css
@@ -8,7 +8,7 @@ h1 {
 
 .container {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   background-color: #212121;
   min-height: 100vh;
 }
@@ -71,7 +71,7 @@ h1 {
   width: 75%;
 }
 
-.prueba {
+.pagination {
   position: fixed;
   bottom: 0;
   z-index: 1;
