--- a/client/src/component/pagination/pagination.module.css
+++ b/client/src/component/pagination/pagination.module.css
@@ -10,6 +10,7 @@
   border-top: 2px solid black;
   border-left: 2px solid black;
   border-right: 2px solid black;
+  z-index: 99;
 }
 
 .containerAll button:hover {
