--- a/client/src/component/navBar/navBar.module.css
+++ b/client/src/component/navBar/navBar.module.css
@@ -5,7 +5,7 @@
   top: 0;
   width: 100%;
   height: 7vh;
-  z-index: 1;
+  z-index: 2;
 }
 
 .containerAll button {
@@ -45,13 +45,14 @@
   align-items: center;
   justify-content: space-around;
   width: 75%;
+  gap: 1rem;
 }
 
 .input {
   background-color: rgb(109, 99, 109);
   border-radius: 15px;
   height: 40px;
-  width: 250px;
+  width: 100%;
   color: white;
   padding: 0px 0px 0px 10px;
   border: none;
@@ -88,4 +89,5 @@
 
 .form {
   border-radius: 20px;
+  width: 300px;
 }
