--- a/client/src/component/landingPage/landingPage.module.css
+++ b/client/src/component/landingPage/landingPage.module.css
@@ -1,23 +1,30 @@
-.div img {
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-
-.div button {
+.div {
+  background: url("./img/12.jpg") no-repeat center center fixed;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
   position: relative;
-  width: 15%;
-  height: 30px;
-  top: 550px;
-  left: 640px;
-  font-size: 20px;
-  font-weight: 550;
-  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
 }
 
-.div button:hover {
+.link {
+  height: fit-content;
+}
+
+.button {
+  position: relative;
+  top: 70vh;
+  font-size: 3vh;
+  border-radius: 10% 10% 10% 10%;
+  background-color: #0071e2;
+  color: black;
+  font-weight: 501;
+  border: none;
+  padding: 5px;
+}
+
+.button:hover {
   cursor: pointer;
+  background-color: black;
+  color: white;
 }
